--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <h1><i> Colégio Estadual São José </i></h1> 
+<h4> Ensino Médio </h4>
+
 </body>
 </html>
