--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
    <h1><i> Colégio Estadual São José </i></h1> 
 <h4> Ensino Médio </h4>
+<head> <h3>Endereço:</h3> 
+       <h5> Rua Bocaiúva, 880- Centro</h5>
+      <h5> Tapira- PR </h5>
+       <h5> Cep: 87830-000 </h5>
+
+</head>
 
 </body>
 </html>
