--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel= "stylesheet" href="style.css">
 </head>
 <body>
-<h1><i> Colégio Estadual São José </i></h1> 
-      <h4> Ensino Médio </h4> 
-<head> <h3>Endereço:</h3> 
-       <h5> Rua Bocaiúva, 880- Centro</h5>
-       <h5> Tapira- PR </h5>
-       <h5> Cep: 87830-000 </h5>
-       <h5> Fone:36791241 </h5>
-</head>
+    <header class="cabeçalho">
+      <h1><i> Colégio Estadual São José </i></h1> 
+      <ul class="cabeçalho-lista" >
+      <li class="cabeçalho-lista-item">Ensino médio</li>
+     </ul>  
+    </header>
 
 </body>
 </html>
