--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
       <li class="cabeçalho-lista-item">Ensino médio</li>
      </ul>  
     </header>
+</body> 
+<body > 
+<header class="cabeçalho-lista">
+   <h1> Endereço: </h1> <h6>.Rua Bocaiúva,880- Centro </h6>    
+   <h6> .Tapira-PR </h6>
+   <h6> . CEP: 87830-000 </h6>
+   <h6> . Fone: 36791241 </h6>
+ <ul class="lista-aulas"  >
+ <li class="lista-aula-item" > Aulas no período da Manhã, Noite </li>  
+ <li class="lista-aula-item-2" > Número de turmas: 5; Média de alunos por turmas: 40 </li>
+</header>
+</body>
+<body> 
+
+
 
 </body>
 </html>
