--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </body> 
 <body > 
 <header class="cabeçalho-lista">
-   <h1> Endereço: </h1> <h6>.Rua Bocaiúva,880- Centro </h6>    
+   <h2> Endereço: </h2> <h6>.Rua Bocaiúva,880- Centro </h6>    
    <h6> .Tapira-PR </h6>
    <h6> . CEP: 87830-000 </h6>
    <h6> . Fone: 36791241 </h6>
@@ -27,8 +27,22 @@
 </header>
 </body>
 <body> 
+<header class="titulo-1">
+<h1>Alguns projetos para 2023</h1>
+ <h2>  Horta: </h2>
+<header class= "texto-1"> 
+<h4> Alunos da turma 2°B, junto com a professora Angeles, Biologia, irão realizar esse projeto.     
+
+</h4>
+
+
+</header>
 
 
 
+
+
+
+</header>
 </body>
 </html>
