--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
 <body> 
 <header class="titulo-1">
 <h1>Alguns projetos para 2023</h1>
- <h2>  Horta: </h2>
+</header>
+<header class=" texto-0"><h2> .Horta </h2></header>
 <header class= "texto-1"> 
-<h4> Alunos da turma 2°B, junto com a professora Angeles, Biologia, irão realizar esse projeto.     
-
-</h4>
+<h4> Alunos da turma 2°B, junto com a professora Angeles, Biologia, irão realizar esse projeto.
+ Dentro do terreno da escola uma horta será feita e cuidada pelos alunos, a irrigação também será 
+ feita por eles, com a ajuda do professor Júnior, Robótica.</h4>
 
 
 </header>
