--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </header>
 </body> 
 <body > 
+  <header class=" texto-cor">
 <header class="cabeçalho-lista">
    <h2> Endereço: </h2> <h6>.Rua Bocaiúva,880- Centro </h6>    
    <h6> .Tapira-PR </h6>
@@ -35,8 +36,16 @@
 <h4> Alunos da turma 2°B, junto com a professora Angeles, Biologia, irão realizar esse projeto.
  Dentro do terreno da escola uma horta será feita e cuidada pelos alunos, a irrigação também será 
  feita por eles, com a ajuda do professor Júnior, Robótica.</h4>
-
-
+</header>
+<header class= "titulo-2"><h2> .Projetos com Ardúinos</h2></header> 
+<header class=" texto-2"> 
+<h4> O professor de robótica, Júnior, propôs fazer com os alunos um secador de mãos automático, para por no pátio, perto dos banheiros; e um dispositivo para tocar o sino da escola automaticamente nos horários corretos.</h4>
+</header>
+<header class=" titulo-3"><h2> .Programação de sites</h2></header>
+<header class="texto-3"> 
+<h4> Os alunos poderão criar sites referentes a escola, com o intuito de ajudar em algo na comunidade.</h4>
+</header>
+<header class="meio-texto-1"><h2> .Um projeto com as matérias de Educação Financeira, Projeto de Vida e Emprendedorismo já está sendo realizado, com a intenção de ajudar a comunidade. Nesse projeto haverá dicas de como administrar melhor o seu prório dinheiro</h2>
 </header>
 
 
@@ -44,6 +53,7 @@
 
 
 
+</header>
 </header>
 </body>
 </html>
