--- a/index.html
+++ b/index.html
@@ -9,19 +9,16 @@
 </head>
 <body>
     <header class="cabeçalho">
-      <h1><i> Colégio Estadual São José </i></h1> 
+      <h1><i> Colégio Estadual São José - Ensino Médio</i></h1> 
       <ul class="cabeçalho-lista" >
-      <li class="cabeçalho-lista-item">Ensino médio</li>
+    
+      <img src="gi.jpg"
+      alt=" entrada do colégio"
      </ul>  
     </header>
 </body> 
 <body > 
-  <header class=" texto-cor">
-<header class="cabeçalho-lista">
-   <h2> Endereço: </h2> <h6>.Rua Bocaiúva,880- Centro </h6>    
-   <h6> .Tapira-PR </h6>
-   <h6> . CEP: 87830-000 </h6>
-   <h6> . Fone: 36791241 </h6>
+  <header>
  <ul class="lista-aulas"  >
  <li class="lista-aula-item" > Aulas no período da Manhã, Noite </li>  
  <li class="lista-aula-item-2" > Número de turmas: 5; Média de alunos por turmas: 40 </li>
@@ -45,9 +42,16 @@
 <header class="texto-3"> 
 <h4> Os alunos poderão criar sites referentes a escola, com o intuito de ajudar em algo na comunidade.</h4>
 </header>
-<header class="meio-texto-1"><h2> .Um projeto com as matérias de Educação Financeira, Projeto de Vida e Emprendedorismo já está sendo realizado, com a intenção de ajudar a comunidade. Nesse projeto haverá dicas de como administrar melhor o seu prório dinheiro</h2>
-</header>
+<header class="meio-texto-1"><h2> .Um projeto com as matérias de Educação Financeira, Projeto de Vida e Emprendedorismo já está sendo realizado, com a intenção de ajudar a comunidade. Nesse projeto haverá dicas de como administrar melhor o seu prório dinheiro.</h2>
+<h2> Rede social</h2>
+<img src="rede.jpeg" alt="símbolo do instagram"
 
+<header class="cabeçalho-lista">
+   <h2> Endereço: </h2> <h6>.Rua Bocaiúva,880- Centro </h6>    
+   <h6> .Tapira-PR </h6>
+   <h6> . CEP: 87830-000 </h6>
+   <h6> . Fone: 36791241 </h6>
+</header>
 
 
 
